[package]
name = "rre-pe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO remove
[lib]
name = "pelib"
path = "src/lib.rs"

[[bin]]
name = "pebin"
path = "src/bin.rs"
# TODO remove end

[dependencies]

[build-dependencies]
cc = "1.0"